k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  namespace: backend
  labels:
    app: api-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api-service
  template:
    metadata:
      labels:
        app: api-service
    spec:
      containers:
      - name: api-service
        image: 687436499847.dkr.ecr.ap-northeast-2.amazonaws.com/backend/api-service:b3762b3ca99b0bcc94702765eeb3ac62f8275945
        ports:
        - containerPort: 5200
