k8s/api-service.yml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: backend
  labels:
    app: api-service
spec:
  type: ClusterIP
  selector:
    app: api-service
  ports:
    - port: 80      # Ingress가 접근할 포트
      targetPort: 5200  # 실제 FastAPI 앱 포트
